compiler/testData/diagnostics/tests/annotations/noNameProperty.kt
// RUN_PIPELINE_TILL: FRONTEND
annotation class Ann(val x: Int, val<!SYNTAX!><!> )

/* GENERATED_FIR_TAGS: annotationDeclaration, primaryConstructor, propertyDeclaration */
